i3: added polybar and redshift

--- a/hyprland/.config/hypr/mmx86/hyprland.conf
+++ b/hyprland/.config/hypr/mmx86/hyprland.conf
@@ -184,6 +184,7 @@ bind = $mainMod SHIFT, R, exec, hyprctl reload
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
+bind = $mainMod, N, exec, $terminal
 bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
