--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -32,10 +32,12 @@ exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
+bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 10%-
+bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +10%
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -175,13 +177,21 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+
+# STATUS-BAR: i3bar
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-    position top  ### Move bar to top. Can't see bar well on notebook.
-    status_command i3status
-    #status_command ~/bin/i3/my_i3status.sh
-}
+#bar {
+#    position top  ### Move bar to top. Can't see bar well on notebook.
+#    status_command i3status
+#    #status_command ~/bin/i3/my_i3status.sh
+#    #status_command i3blocks
+#}
+
+
+# STATUS-BAR: POLYBAR
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 ### ==========================================================================
 ### Launch initial applications
@@ -221,4 +231,4 @@ exec --no-startup-id udiskie -ans &
 
 ### xinput enable/disable devices (keyboard).
 exec --no-startup-id input-device-indicator &
-
+exec --no-startup-id redshift &
