--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -1,3 +1,4 @@
+
 ;==========================================================
 ;
 ;
@@ -51,7 +52,7 @@ separator-foreground = ${colors.disabled}
 font-0 = monospace;2
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date systray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -76,7 +77,8 @@ enable-ipc = true
 type = internal/tray
 
 format-margin = 8pt
-tray-spacing = 16pt
+tray-spacing = 8pt
+tray-size = 90%
 
 [module/xworkspaces]
 type = internal/xworkspaces
