--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -52,7 +52,7 @@ separator-foreground = ${colors.disabled}
 font-0 = monospace;2
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date systray
+modules-right = filesystem pulseaudio xkeyboard memory cpu mmx86-gpu-temp wlan eth date systray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -182,5 +182,13 @@ label-foreground = ${colors.primary}
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
+
+[module/mmx86-gpu-temp]
+type = custom/script
+
+exec = nvidia-smi --query-gpu=temperature.gpu --format=csv,noheader,nounits | while read line; do echo "$line°C"; done || echo "?°C"
+format-prefix = "GPU "
+format-prefix-foreground = ${colors.primary}
+interval = 2
 
 ; vim:ft=dosini
