hyprland: change monitor resolution and refresh rate to best, enable redshift

--- a/hyprland/.config/hypr/mmx86/hyprland.conf
+++ b/hyprland/.config/hypr/mmx86/hyprland.conf
@@ -2,6 +2,7 @@ source = ./nvidia.conf
 #bind = $mainMod, Print, exec, flameshot gui
 bind = SUPER, Print, exec, flameshot gui
 exec-once = waybar
+exec-once = gammastep -c ~/.config/redshift/redshift.conf
 
 # https://wiki.hypr.land/Plugins/Using-Plugins/ 
 # TODO: move to subdirs
@@ -16,7 +17,7 @@ env = AQ_DRM_DEVICES,/dev/dri/card2:/dev/dri/card1
 
 # https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=,preferred,auto,auto
-monitor=,preferred,auto,1
+monitor=,highres@highrr,auto,1
 
 
 ###################
